feat: add Prisma schema with User & Post models, database connection, and initial migrations

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,4 @@
 # Server
 PORT="3000"
 NODE_ENV="development"
+DATABASE_URL="postgresql://username:password@localhost:5432/Database_name?schema=public"
